<resources>
    <string name="app_name">ЗАМЕТКИ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_note">Первая заметка</string>
    <string name="second_note">Вторая заметка</string>
    <string name="third_note">Третья заметка</string>
    <string name="first_description">Первое описание</string>
    <string name="second_description">Второе описание</string>
    <string name="third_description">Третье описание</string>
    <string name="first_date">Первая дата</string>
    <string name="second_date">Вторая дата</string>
    <string name="third_date">Третья дата</string>
    <string name="save_button">Сохранить заметку</string>
    <string name="create_button">Новая заметка</string>
    <string name="delete_button">Удалить заметку</string>
    <string name="creation_date">Дата создания:</string>
    <string name="pick_date">Сменить дату</string>
    <string name="start_picture_text">ЗАМЕТКИ</string>
    <string name="about">О приложении</string>
    <string name="exit">Выход</string>
    <string name="about_app">Приложение \"Заметки\" создано в рамках обучения на курсе \"Знакомство с платформой android\" образовательного портала GeekBrains. \n\nАвтор: Родион Усманов.</string>
    <string name="drawer_header">Пользователь</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="toolbar_name">ЗАМЕТКИ</string>
    <string name="themes">Выбор темы</string>
    <string name="applyThemeButton">Выбрать тему</string>
    <string name="deafultTheme">Стандартная тема</string>
    <string name="dayTheme">Дневная тема</string>
    <string name="nightTheme">Ночная тема</string>
    <string name="title_note_list">ЗАМЕТКИ</string>
    <string name="unDefaultTheme">Нестандартная тема</string>
    <string name="choose_avatar">Выбор аватара</string>
    <string name="change_name">Смена имени</string>
    <string name="name">Пользователь</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="add_remove_favorites">Избранное</string>
    <string name="note_saved">Заметка сохранена</string>
    <string name="note_rebuild">Восстановить</string>
    <string name="note_deleted">Заметка удалена</string>
    <string name="note_extended">Подробная информация</string>
    <string name="main_list">Главный экран</string>
    <string name="switch_list_grid_view">Сменить раскладку</string>
    <string name="note_name">Note name</string>
    <string name="note_description">Note description</string>
    <string name="save_date">Сохранить дату</string>
    <string name="note_creation_date">Note creation date</string>
    <string name="note_index">Note Index</string>

</resources>